--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "8.39.0",
+    "prettier": "2.8.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.21.8"
   }
 }
