--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "8.39.0",
+    "prettier": "2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.3",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "@typescript-eslint/parser": "^5.59.7",
-    "eslint": "8.39.0",
-    "prettier": "2.8.8"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
