--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/parser": "^5.59.7",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "eslint": "8.39.0",
     "prettier": "2.8.8",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
