--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.63.3",
+    "socket.io-client": "^4.6.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
@@ -53,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.21.8"
+    "@babel/eslint-parser": "^7.21.8",
+    "@types/redux-logger": "^3.0.9"
   }
 }
