--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,10 +16,14 @@
     }
   },
   "rules": {
-    "object-curly-spacing": [2, "always", {
-      "objectsInObjects": false,
-      "arraysInObjects": true
-    }],
+    "object-curly-spacing": [
+      2,
+      "always",
+      {
+        "objectsInObjects": false,
+        "arraysInObjects": true
+      }
+    ],
     "linebreak-style": "off",
     "semi": "off",
     "quotes": [0, "single"],
