--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "coincap-project",
+  "homepage": "https://MaksimBozhko.github.io/coincap-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,6 +18,7 @@
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "eslint": "8.39.0",
+    "gh-pages": "^5.0.0",
     "prettier": "2.8.8",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -34,7 +36,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
