--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "coincap-project",
-  "homepage": "https://MaksimBozhko.github.io/coincap-project",
+  "homepage": ".",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
