fix: change homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coincap-project",
-  "homepage": ".",
+  "homepage": "",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
